# fantastical-cli

./: AGENTS.md  LICENSE  README.md  TODO.md  pyproject.toml
_experiments/: 18_input_dates.py  19_title_filter.py  19b_title_static.py  20_attendees.py  21_attendees_refs.py  22_attendees_level1.py  claude-test-title-filter.shortcut  claude-test-title-static.shortcut
_experiments/_tools/: extract_plist.py
docs/: cherri.md  fantastical-app-intents.md  jxa-findings.md  mcp-testing.md  shortcuts-format.md  why-not-eventkit.md
docs/resolved_tickets/: 2026-02-09-LAYER-stop-leaking-backend-constants-to-cli.md  2026-02-09-SEARCH-search-performance-with-server-side-title-filtering.md  2026-02-10-CALFIELD-rename-misleading-calendar-field-to-calendarIdentifier.md  2026-02-20-ATTENDEES-enrich-event-data-with-attendees-and-emails.md
src/fantastical/: __init__.py  __main__.py  api.py  cli.py  server.py
src/fantastical/backend/: fantastical.py  jxa.py  shortcut_gen.py  shortcuts.py
tests/: test_api.py  test_parse.py  test_server.py  test_shortcut_gen.py  test_shortcuts_integration.py
