[project]
name = "fantastical-mcp"
version = "0.1.0"
description = "CLI and MCP server for Fantastical calendar on macOS"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "mcp[cli]>=1.2.0",
]

[project.scripts]
fantastical = "fantastical.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fantastical"]
